Mengganti Judul Web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistem Informasi Bencana - Kota Palu</title>
+    <title>Sistem Informasi Bencana Banjir - Kota Palu</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <h1>Sistem Informasi Bencana Kota Palu</h1>
+            <h1>Sistem Informasi Bencana Banjir Kota Palu</h1>
           </div>
           <nav>
             <ul>
@@ -30,7 +30,7 @@
     </header>
     <section class="hero">
         <div class="hero-content">
-            <h2>Sistem Informasi Bencana Kota Palu</h2>
+            <h2>Prediksi Dini Bencana Banjir</h2>
             <p>Memantau dan menganalisis data bencana banjir, tanah longsor, dan tsunami di Kota Palu</p>
         </div>
     </section>
