Ubah data kecamatan

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Banjir per Kabupaten</div>
+                        <div class="card-title">Banjir per Kecamatan</div>
                     </div>
                     <div class="chart-container">
                         <canvas id="correlationChart"></canvas>
@@ -112,7 +112,7 @@
                             <option value="">Semua Tahun</option>
                         </select>
                         <select id="disasterFilter" class="form-control">
-                            <option value="">Semua Semua Kabupaten</option>
+                            <option value="">Semua Semua Kecamatan</option>
                         </select>
                         <select id="disasterFilter" class="form-control">
                             <option value="">Semua Status</option>
@@ -124,7 +124,7 @@
                         <thead>
                             <tr>
                                 <th>Tanggal</th>
-                                <th>Kabupaten</th>
+                                <th>Kecamatan</th>
                                 <th>Curah Hujan (mm)</th>
                                 <th>Kelembapan (%)</th>
                                 <th>Kecepatan Angin (km/jam)</th>
