--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="hero">
         <div class="hero-content">
             <h2>Prediksi Dini Bencana Banjir</h2>
-            <p>Memantau dan menganalisis data bencana banjir, tanah longsor, dan tsunami di Kota Palu</p>
+            <p>Memantau dan menganalisis data untuk prediksi dini bencana banjir di Kota Palu</p>
         </div>
     </section>
 
