--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                         <select id="yearFilter" class="form-control">
                             <option value="">Semua Tahun</option>
                         </select>
-                        <select id="disasterFilter" class="form-control">
-                            <option value="">Semua Semua Kecamatan</option>
+                        <select id="districFilter" class="form-control">
+                            <option value="">Semua Kecamatan</option>
                         </select>
                         <select id="disasterFilter" class="form-control">
                             <option value="">Semua Status</option>
