Ubah judul analisis

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="dashboard-grid">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Bulan dengan Bencana Terbanyak</div>
+                        <div class="card-title">Bulan dengan Banjir Terbanyak</div>
                     </div>
                     <div class="chart-container">
                         <canvas id="monthlyDisasterChart"></canvas>
