Ubah judul peta sebaran

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             
             <div class="card">
                 <div class="card-header">
-                    <div class="card-title">Peta Sebaran Bencana</div>
+                    <div class="card-title">Peta Sebaran Banjir Kota Palu</div>
                 </div>
                 <div class="map-container" id="disasterMap"></div>
             </div>
