Ubah judul pada footer

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <div class="footer-section">
                     <h3>Links</h3>
                     <p><a href="#dashboard">Dashboard</a></p>
-                    <p><a href="#data">Data Bencana</a></p>
+                    <p><a href="#data">Data Banjir</a></p>
                     <p><a href="#analisis">Analisis</a></p>
                 </div>
             </div>
