--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                         <div class="card-title">Banjir per Kecamatan</div>
                     </div>
                     <div class="chart-container">
-                        <canvas id="correlationChart"></canvas>
+                        <canvas id="districtChart"></canvas>
+
                     </div>
                 </div>
             </div>
