--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <select id="yearFilter" class="form-control">
                             <option value="">Semua Tahun</option>
                         </select>
-                        <select id="districFilter" class="form-control">
+                        <select id="districtFilter" class="form-control">
                             <option value="">Semua Kecamatan</option>
                         </select>
                         <select id="disasterFilter" class="form-control">
