mengubah tampilan header

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <nav>
             <ul>
               <li><a href="#dashboard">Dashboard</a></li>
-              <li><a href="#data">Data Bencana</a></li>
-              <li><a href="#prediksi">Data Bencana</a></li>
+              <li><a href="#data">Data Banjir</a></li>
+              <li><a href="#prediksi">Prediksi</a></li>
               <li><a href="#analisis">Analisis</a></li>
               <li><a href="#tentang">Tentang</a></li>
             </ul>
@@ -262,7 +262,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Tentang Sistem</h3>
-                    <p>Sistem informasi bencana Kota Palu untuk memantau dan menganalisis data bencana alam seperti banjir, tanah longsor, dan tsunami.</p>
+                    <p>Sistem informasi bencana Kota Palu untuk memantau dan menganalisis data untuk prediksi dini bencana banjir.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Kontak</h3>
